# janus

./: CLAUDE.md  README.md  index.html  pyproject.toml
src/janus/: __init__.py  checker.py  core.py  good_first_issue.py  matcher.py
tests/: test_checker.py  test_core.py  test_matcher.py
