[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "janus"
version = "0.1.0"
description = "Beginner-friendly open source contribution guide"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
